=========
Changelog
=========

Version 4.3.2

- Fixed error in Karazhan: Chamber of Secrets that showed up on Horde side. (thanks nonameform)

- Quests Added:
	- Naxxramas: The Key to the Focusing Iris
	- Naxxramas: The Heroic Key to the Focusing Iris
	- Eye of Eternity: Judgment at the Eye of Eternity
	- Eye of Eternity: Heroic Judgment at the Eye of Eternity
	- Dire Maul North: The Gordok Taste Test (thanks nonameform)


Version 4.3.1

- New Russian localization added.
- Simplified Chinese localization updated.
- Traditional Chinese localization updated.
- Fixed AlphaMap WOTLK compatibility.
- Fixed flags for Deadmines and Gnomeregan quests. Thanks gothic251.
- Missing information added for many WOTLK quests.

- Removed Onyxia attunement quests: 
	- BRD: Marshal Windsor (A)
	- BRD: A Crumpled Up Note (A)
	- BRD: A Shred of Hope (A)
	- BRD: Jailbreak! (A)
	- UBRS: Drakefire Amulet (A)

- Quests Added:
	- Uldaman: Indurium Ore (thanks gothic251)
	- UBRS: Egg Collection (thanks nonameform)
	- Scholomance: The Darkreaver Menace (Shaman) (thanks nonameform)
	- AQ40: Mortal Champions



Version 4.3.0

- Support for all new Wrath of the Lich King maps in both Atlas and AlphaMap.
- Coordinates in Stormwind and Eastern Plaguelands updated since the changes with Patch 3.0 changed them all.
- All new coordinates being added will include one decimal for more accuracy. Coordinates already in may be updated in the future.
- Removed old Naxxramas quests.

- Quests added: (some are missing data)
	- Utgarde Keep: Proof of Demise: Ingvar the Plunderer (Heroic Daily)
	- Utgarde Keep: Into Utgarde! (A)
	- Utgarde Keep: Disarmament
	- Utgarde Keep: A Score to Settle (H)
	- Utgarde Keep: Ingvar Must Die! (H)
	- Utgarde Pinnacle: Timear Foresees Ymirjar Berserkers in your Future! (Daily)
	- Utgarde Pinnacle: Proof of Demise: King Ymiron (Heroic Daily)
	- Utgarde Pinnacle: Junk in My Trunk
	- Utgarde Pinnacle: Vengeance Be Mine!
	- The Nexus: Proof of Demise: Keristrasza (Heroic Daily)